--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <p><a href="index.html" id="back-to-start"><span>back</span></a></p>
+  <p><a href="http://nnekannagbo.com/" id="back-to-start"><span>back</span></a></p>
   <br>
     <!-- artist intro -->
 <p>Projects</p>
