Update project list

--- a/connect/index.html
+++ b/connect/index.html
@@ -20,8 +20,8 @@
 
 <p>Connect with me</p>
 <ol>
-  <li><a href="#" target="_blank" class="content">Github</a></li>
-  <li><a href="#" target="_blank" class="content">LinkedIn</a></li>
+  <li><a href="https://github.com/nnekannagbo" target="_blank" class="content">Github</a></li>
+  <li><a href="https://www.linkedin.com/in/nneka-nnagbo/" target="_blank" class="content">LinkedIn</a></li>
   <!-- <li><a href="#" target="_blank" class="content">Link garden 2</a></li> -->
 </ol>
 <!-- <br> -->
