--- a/projects/index.html
+++ b/projects/index.html
@@ -22,8 +22,8 @@
 <li><a href="https://medium.com/a-chatbots-life/how-to-design-a-personality-in-12-days-part-1-5cf8334a97c2" target="_blank" class="content">CRA Bot, Designing a chatbot for tax mailing addresses</a></li>
   <li><a href="https://openresearch.ocadu.ca/id/eprint/3960/" target="_blank" class="content">Communication access guidelines for online meetings</a></li>
     <li><a href="http://inchospital.freehostia.com/" target="_blank" class="content">Inclusive hospital design</a></li>
-      <li><a href="#" class="content">Designing an emotional wayfinding app</a> (Coming soon)</li>
-        <li><a href="#" class="content">Developing tools for testing with screen reader users</a> (Coming soon)</li>
+      <li><a href="#" class="" id="coming-soon">Designing an emotional wayfinding app</a> (Coming soon)</li>
+        <li><a href="#" class="" id="coming-soon">Developing tools for testing with screen reader users</a> (Coming soon)</li>
 </ol>
 <br>
 <!-- <p><a class="content" href="https://creativecommons.org/licenses/by-sa/4.0/">copyright 2023</a></p> -->
