--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,11 @@
       <li><a href="#" class="" id="coming-soon">Designing an emotional wayfinding app</a> (Coming soon)</li>
         <li><a href="#" class="" id="coming-soon">Developing tools for testing with screen reader users</a> (Coming soon)</li>
 </ol>
+
+<p>Templates</p>
+<ol>
+<li><a href="https://github.com/nnekannagbo/lofi-site-template" target="_blank" class="content">Lo-fi website template</a></li>
+</ol>
 <br>
 <!-- <p><a class="content" href="https://creativecommons.org/licenses/by-sa/4.0/">copyright 2023</a></p> -->
 
