--- a/play/index.html
+++ b/play/index.html
@@ -23,6 +23,7 @@
   <li><a href="https://github.com/nnekannagbo/All-Staff-Video-Game" target="_blank" class="content">All Staff VG</a></li>
   <li><a href="https://github.com/JayTheDaniels/The-Astral-Project/blob/main/README.md" target="_blank" class="content">The Astral Project</a></li>
   <li><a href="https://medium.com/iea-digital-games-diary" target="_blank" class="content">IEA Digital Games Diary</a></li>
+  <li><a href="#" target="_blank" id="coming-soon">Portal</a> (a game about webrings, Coming soon)</li>
 </ol>
 <!-- <br> -->
 <!-- <p><a class="content" href="https://creativecommons.org/licenses/by-sa/4.0/">copyright 2023</a></p> -->
