--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,7 @@
 
 <p>Templates</p>
 <ol>
-<li><a href="https://github.com/nnekannagbo/lofi-site-template" target="_blank" class="content">Lo-fi website template</a></li>
+<li><a href="https://github.com/nnekannagbo/a-name-goes-here" target="_blank" class="content">A name goes here</a> (Lo-fi starter website)</li>
 </ol>
 <br>
 <!-- <p><a class="content" href="https://creativecommons.org/licenses/by-sa/4.0/">copyright 2023</a></p> -->
