--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- artist intro -->
-<p>I'm Nneka <img src="/img/nn-headshot.jpg" height="50" alt="staring blankly at camera with face in hand and mundane objects in the background" title="">. I'm a designer, writer, creative coder<!--<img src="soft-radial-grdnt-2.avif" height="50">-->, and transmedia artist playing in the surreal. I'm passionate about communication accessibility in online/digital spaces——and its applications to art and design——with a focus on human interaction, connection and experimental creative expression through information and communication technology. I'm currently based in Ottawa where I'm helping improve public service sites for the Government of Canada and making digital products, tools, and systems accessible for the people who need to use them. 
+<p>I'm Nneka <img src="/img/nn-headshot.jpg" height="50" alt="staring blankly at camera with face in hand and mundane objects in the background" title="">. I'm a designer, writer, creative coder, and transmedia artist playing in the surreal. I'm passionate about communication accessibility in online/digital spaces——and its applications to art and design——with a focus on human interaction, connection and experimental creative expression through information and communication technology. I'm currently based in Ottawa, Canada where I'm helping improve public service sites for the Government of Canada and making digital products, tools, and systems accessible for the people who need to use them. 
 </p>
 
 <p><a class="content" href="/projects/">Projects</a> <img src="/img/projects.png" height="50">, <a class="content" href="/play/">Play</a> <img src="/img/play.png" height="50">, <a class="content" href="/connect/">Connect</a> <img src="/img/connect.png" height="50"></p>
