--- a/connect/index.html
+++ b/connect/index.html
@@ -22,7 +22,7 @@
 <ol>
   <li><a href="https://github.com/nnekannagbo" target="_blank" class="content">Github</a></li>
   <li><a href="https://www.linkedin.com/in/nneka-nnagbo/" target="_blank" class="content">LinkedIn</a></li>
-  <!-- <li><a href="#" target="_blank" class="content">Link garden 2</a></li> -->
+  <li><a href="https://somethingliveshere.com/" target="_blank" class="content">Another link garden</a></li>
 </ol>
 <!-- <br> -->
 <!-- <p><a class="content" href="https://creativecommons.org/licenses/by-sa/4.0/">copyright 2023</a></p> -->
