--- a/projects/index.html
+++ b/projects/index.html
@@ -19,8 +19,8 @@
     <!-- artist intro -->
 <p>Projects</p>
 <ol>
+  <li><a href="https://communication-access.github.io/online-meeting-accessibility-toolkit/" target="_blank" class="content">Communication access toolkit for online meetings</a></li>
 <li><a href="https://medium.com/a-chatbots-life/how-to-design-a-personality-in-12-days-part-1-5cf8334a97c2" target="_blank" class="content">CRA Bot, Designing a chatbot for tax mailing addresses</a></li>
-  <li><a href="https://openresearch.ocadu.ca/id/eprint/3960/" target="_blank" class="content">Communication access guidelines for online meetings</a></li>
     <li><a href="http://inchospital.freehostia.com/" target="_blank" class="content">Inclusive hospital design</a></li>
       <li><a href="#" class="" id="coming-soon">Designing an emotional wayfinding app</a> (Coming soon)</li>
         <li><a href="#" class="" id="coming-soon">Developing tools for testing with screen reader users</a> (Coming soon)</li>
